# lacus-solana

./: .env.example  .gitignore  Anchor.toml  concept-1-gateway.html  concept-2-spine.html  concept-3-strata.html  deployment-addresses.json  hardhat.config.js  init-factory.cjs  package-lock.json  package.json  test-buy-deposit.cjs  test-issue.cjs  test-issue.mjs  tsconfig.tsbuildinfo
artifacts/contracts/BondEscrow.sol/: BondEscrow.dbg.json  BondEscrow.json
artifacts/contracts/BondExchange.sol/: BondExchange.dbg.json  BondExchange.json  IBondToken.json
artifacts/contracts/BondFactory.sol/: BondFactory.json  IBondExchange.json
contracts/: BondEscrow.sol  BondExchange.sol  BondFactory.sol  BondToken.sol  MockUSDC.sol  README.md
programs/lacus/: Cargo.toml
programs/lacus/src/: lib.rs
public/design-explorations/: aqua-arch.html  current-orbit.html  flow-state.html  liquid-terminal.html  market-spine.html  signal-bloom.html  slab-terminal-2.html
scripts/: check-new-bond.js  check-state.js  create-test-usdc.ts  deploy-escrow.js  deploy.js  init-factory.ts  mint-usdc.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: CTASection.tsx  ChainGuard.tsx  ErrorBoundary.tsx  Footer.tsx  GlobalInteractions.tsx  HeroSection.tsx  Logo.tsx  MarketsRegister.tsx  Navbar.tsx  PrinciplesSection.tsx  SolanaWalletProvider.tsx  Web3Provider.tsx  YieldBathymetryCard.tsx
src/config/: contracts.ts  solana.ts
src/hooks/: useLacus.ts
src/lib/: lacus-idl.json  lacus-program.ts  supabase-retry.ts  useClientInteractions.ts
src/types/: lacus.ts
(+16 files in other folders)
