[package]
name = "lacus"
version = "0.1.0"
description = "Lacus Tokenized Bond Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lacus"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token"] }
